12-site3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonapi
  namespace: yatest
  labels:
    app: pythonapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonapi
  template:
    metadata:
      labels:
        app: pythonapi
    spec:
      containers:
        - name: pythonapi
          image: git.systementor.se/yacloud/pythoncrud
          ports:
            - containerPort: 5000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: pythonapi-service
  labels:
    app: pythonapi
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: pythonapi
  sessionAffinity: None
