14-site4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python0515
  namespace: yatest
  labels:
    app: python0515
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python0515
  template:
    metadata:
      labels:
        app: python0515
    spec:
      containers:
        - name: python0515
          image: git.systementor.se/yacloud/python0515
          ports:
            - containerPort: 5000
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: python0515-service
  labels:
    app: python0515
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: python0515
  sessionAffinity: None
