15-site5.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gosite
  namespace: yatest
  labels:
    app: gosite
spec:
  replicas: 7
  selector:
    matchLabels:
      app: gosite
  template:
    metadata:
      labels:
        app: gosite
    spec:
      containers:
        - name: gosite
          image: git.systementor.se/yacloud/gosite
          ports:
            - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: gosite-service
  labels:
    app: gosite
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gosite
  sessionAffinity: None
