60-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yatest
  name: staticwebserver-service
  labels:
    app: staticwebserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: staticwebserver
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sites
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "hockey11111.chickenkiller.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: staticwebserver-service
                port:
                  number: 80
