yaingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prodingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "yagamebackend.systementor.se"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gamebackend-service
                port:
                  number: 80
    - host: "yagame.systementor.se"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gamefrontend-service
                port:
                  number: 80
